--- a/MHW Randomizer/Controls/Misc.xaml
+++ b/MHW Randomizer/Controls/Misc.xaml
@@ -8,62 +8,65 @@
              d:DesignHeight="450" d:DesignWidth="600">
     <StackPanel>
         <Grid>
-            <TextBlock Text="Misc"
-                       Padding="1.5 0"
-                       Margin="15 -4 0 0"
-                       Background="White"
-                       HorizontalAlignment="Left"
-                       VerticalAlignment="Top"
-                       Panel.ZIndex="1"
-                       FontWeight="Bold"
-                       Height="16"/>
-            <Border BorderBrush="Gray"
-                    BorderThickness="1"
-                    Margin="5"
-                    Height="100"
-                    VerticalAlignment="Top">
-                <StackPanel Orientation="Horizontal"
-                            Margin="0 5">
-                    <StackPanel>
-                        <CheckBox Content="Random Scoutfly Colour"
-                                  IsChecked="{Binding RandomScoutflyColour, Source={x:Static local:IoC.Settings}}"
-                                  Margin="5 4"
-                                  ToolTip="Randomizes the scoutfly colour for when tracking a monster, and the monster trace colours with a colour from a list I made &#x0a;(Different colours for normal monster, elder dragon, and tempered)"
-                                  ToolTipService.ShowDuration="10000"/>
-                        <CheckBox Content="Completely Random Scoutfly Colour"
-                                  IsChecked="{Binding CompletelyRandomScoutflyColour, Source={x:Static local:IoC.Settings}}"
-                                  Margin="12 4"
-                                  ToolTip="Make it so the colours aren't picked from the colour list and are completely random"
-                                  ToolTipService.ShowDuration="10000"
-                                  IsEnabled="{Binding RandomScoutflyColour, Source={x:Static local:IoC.Settings}}"/>
-                        <CheckBox Content="Different Track Colour"
-                                  IsChecked="{Binding DifferentTrackScoutflyColour, Source={x:Static local:IoC.Settings}}"
-                                  Margin="12 4"
-                                  ToolTip="Makes the track colour for monsters different from the scoutfly colour, instead of it being the same as the scoutfly's random colour"
-                                  ToolTipService.ShowDuration="10000"
-                                  IsEnabled="{Binding RandomScoutflyColour, Source={x:Static local:IoC.Settings}}"/>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid>
+                <TextBlock Text="Misc"
+                           Padding="1.5 0"
+                           Margin="15 -4 0 0"
+                           Background="White"
+                           HorizontalAlignment="Left"
+                           VerticalAlignment="Top"
+                           Panel.ZIndex="1"
+                           FontWeight="Bold"
+                           Height="16"/>
+                <Border BorderBrush="Gray"
+                        BorderThickness="1"
+                        Margin="5"
+                        Height="100"
+                        VerticalAlignment="Top">
+                    <StackPanel Orientation="Horizontal"
+                                Margin="0 5">
+                        <StackPanel>
+                            <CheckBox Content="Random Scoutfly Colour"
+                                      IsChecked="{Binding RandomScoutflyColour, Source={x:Static local:IoC.Settings}}"
+                                      Margin="5 4"
+                                      ToolTip="Randomizes the scoutfly colour for when tracking a monster, and the monster trace colours with a colour from a list I made &#x0a;(Different colours for normal monster, elder dragon, and tempered)"
+                                      ToolTipService.ShowDuration="10000"/>
+                            <CheckBox Content="Completely Random Scoutfly Colour"
+                                      IsChecked="{Binding CompletelyRandomScoutflyColour, Source={x:Static local:IoC.Settings}}"
+                                      Margin="12 4"
+                                      ToolTip="Make it so the colours aren't picked from the colour list and are completely random"
+                                      ToolTipService.ShowDuration="10000"
+                                      IsEnabled="{Binding RandomScoutflyColour, Source={x:Static local:IoC.Settings}}"/>
+                            <CheckBox Content="Different Track Colour"
+                                      IsChecked="{Binding DifferentTrackScoutflyColour, Source={x:Static local:IoC.Settings}}"
+                                      Margin="12 4"
+                                      ToolTip="Makes the track colour for monsters different from the scoutfly colour, instead of it being the same as the scoutfly's random colour"
+                                      ToolTipService.ShowDuration="10000"
+                                      IsEnabled="{Binding RandomScoutflyColour, Source={x:Static local:IoC.Settings}}"/>
+                        </StackPanel>
                     </StackPanel>
-                </StackPanel>
-            </Border>
-        </Grid>
-        
-        <Grid>
-            <TextBlock Text="Tweaks"
-                       Padding="1.5 0"
-                       Margin="15 -4 0 0"
-                       Background="White"
-                       HorizontalAlignment="Left"
-                       VerticalAlignment="Top"
-                       Panel.ZIndex="1"
-                       FontWeight="Bold"
-                       Height="16"/>
-            <Border BorderBrush="Gray"
-                    BorderThickness="1"
-                    Margin="5"
-                    VerticalAlignment="Top">
-                <StackPanel Orientation="Horizontal"
-                        Margin="0 5">
-                    <StackPanel>
+                </Border>
+            </Grid>
+            <Grid Grid.Column="1">
+                <TextBlock Text="Tweaks"
+                           Padding="1.5 0"
+                           Margin="15 -4 0 0"
+                           Background="White"
+                           HorizontalAlignment="Left"
+                           VerticalAlignment="Top"
+                           Panel.ZIndex="1"
+                           FontWeight="Bold"
+                           Height="16"/>
+                <Border BorderBrush="Gray"
+                        BorderThickness="1"
+                        Margin="5"
+                        VerticalAlignment="Top"
+                        Padding="0 0 0 42">
+                    <StackPanel Margin="0 5">
                         <CheckBox Content="Make All Quests 1 Player"
                                   IsChecked="{Binding OnePlayerQuests, Source={x:Static local:IoC.Settings}}"
                                   Margin="5 4"
@@ -75,9 +78,10 @@
                                   ToolTip="Sets kinsects to have a speed of atleast 3 to make them a bit more bearable to start with"
                                   ToolTipService.ShowDuration="10000"/>
                     </StackPanel>
-                </StackPanel>
-            </Border>
+                </Border>
+            </Grid>
         </Grid>
+
 
         <Grid Margin="0 50 0 0">
             <TextBlock Text="Experimental Features (Need Iceborne Installed)"
