--- a/MHW Randomizer/Windows/MainWindow.xaml
+++ b/MHW Randomizer/Windows/MainWindow.xaml
@@ -6,9 +6,10 @@
         xmlns:local="clr-namespace:MHW_Randomizer"
         mc:Ignorable="d"
         Closing="Window_Closing"
-        Title="MHW Randomizer - v1.2.4" Height="630" Width="620"
-        MinHeight="630"
-        MinWidth="620">
+        ResizeMode="CanMinimize"
+        Title="MHW Randomizer - v1.2.4" Height="610" Width="610"
+        MinHeight="610"
+        MinWidth="610">
     <Grid>
         <Border Background="White"
                 BorderBrush="Gray"
