--- a/MHW Randomizer/Controls/Misc.xaml
+++ b/MHW Randomizer/Controls/Misc.xaml
@@ -82,9 +82,12 @@
             </Grid>
         </Grid>
 
-
-        <Grid Margin="0 50 0 0">
-            <TextBlock Text="Experimental Features (Need Iceborne Installed)"
+        <TextBlock Margin="5 50 5 4"
+                   TextWrapping="Wrap">
+            These options haven't been tested much so you <Italic>may</Italic> run into issues
+        </TextBlock>
+        <Grid>
+            <TextBlock Text="Experimental Features"
                        Padding="1.5 0"
                        Margin="15 -4 0 0"
                        Background="White"
@@ -100,20 +103,49 @@
                 <StackPanel Orientation="Horizontal"
                         Margin="0 5">
                     <StackPanel>
-                        <TextBlock Text="These options haven't been tested much so may run into issues"
+                        <TextBlock Text="If you get stuck falling out of bounds abandon the quest then go back into it and you'll spawn at the camp"
                                    Margin="5 0 5 4"
                                    TextWrapping="Wrap"/>
+                        <CheckBox Content="Randomize Zorah Story Quests (Changes Map and Zorah)"
+                                  IsChecked="{Binding RandomizeZorahStoryQuests, Source={x:Static local:IoC.Settings}}"
+                                  Margin="5 4"
+                                  ToolTip="Will change the map and randomize Zorah to be something else making it just like a regular hunt quest, instead of a slow autoscroller &#x0a;(Only changes the Zorah quests required for the story, so can still get Zorah materials from the optional quest version) &#x0a;(Your Palico will be frozen but just fast travel to a camp to fix them)"
+                                  ToolTipService.ShowDuration="10000"
+                                  IsEnabled="{Binding RandomizeQuests, Source={x:Static local:IoC.Settings}}"/>
+                    </StackPanel>
+                </StackPanel>
+            </Border>
+        </Grid>
+        <Grid Margin="0 2">
+            <TextBlock Text="Experimental Iceborne Features (Need Iceborne Installed)"
+                       Padding="1.5 0"
+                       Margin="15 -4 0 0"
+                       Background="White"
+                       HorizontalAlignment="Left"
+                       VerticalAlignment="Top"
+                       Panel.ZIndex="1"
+                       FontWeight="Bold"
+                       Height="16"/>
+            <Border BorderBrush="Gray"
+                BorderThickness="1"
+                Margin="5"
+                VerticalAlignment="Top">
+                <StackPanel Orientation="Horizontal"
+                        Margin="0 5">
+                    <StackPanel>
                         <CheckBox Content="Iceborne Monsters in Low Rank"
                                   IsChecked="{Binding IBMonstersInLowRank, Source={x:Static local:IoC.Settings}}"
                                   Margin="5 4"
                                   ToolTip="Adds iceborne monsters to the pool of monsters for low rank, could be hard if include them"
-                                  ToolTipService.ShowDuration="10000"/>
+                                  ToolTipService.ShowDuration="10000"
+                                  IsEnabled="{Binding RandomizeQuests, Source={x:Static local:IoC.Settings}}"/>
                         <CheckBox Content="Iceborne Monsters in High Rank"
                                   IsChecked="{Binding IBMonstersInHighRank, Source={x:Static local:IoC.Settings}}"
                                   Margin="5 4"
                                   ToolTip="Adds iceborne monsters to the pool of monsters for high rank"
-                                  ToolTipService.ShowDuration="10000"/>
-                        <TextBlock Text="Requires random maps enabled on the quest settings"
+                                  ToolTipService.ShowDuration="10000"
+                                  IsEnabled="{Binding RandomizeQuests, Source={x:Static local:IoC.Settings}}"/>
+                        <TextBlock Text="Requires random maps enabled on the quests tab"
                                    TextWrapping="Wrap"
                                    FontWeight="SemiBold"
                                    Margin="5 4 5 0"/>
